SQLSelectIndexReuseTest partially restored.